components/cost-management/policies/.chainsaw-test/resources/namespace-cost-center.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ($namespace)
  labels:
    konflux-ci.dev/type: tenant
    cost-center: "team"
    insights_cost_management_optimizations: "true"
