components/cost-management/policies/update_namespace_labels.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-center-from-namespace
  annotations:
    policies.kyverno.io/title: Propagate Cost-Center from Namespace
    policies.kyverno.io/category: Cost Management
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod, Namespace
    policies.kyverno.io/description: >-
      This policy ensures that the cost-center label from a Namespace is propagated
      to all Pods within that Namespace. It applies only to Namespaces with the
      konflux-ci.dev/type: tenant label and ensures that the cost-center label exists
      in the Namespace before applying the mutation.
spec:
  rules:
    - name: propagate-cost-center-from-namespace
      match:
        any:
        - resources:
            kinds:
            - Pod
            namespaceSelector:
              matchLabels:
                konflux-ci.dev/type: tenant
      context:
        - name: costcenterLabel
          apiCall:
            urlPath: "/api/v1/namespaces/{{ request.object.metadata.namespace }}"
            method: GET
            jmesPath: 'metadata.labels."cost-center" || ""'
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              cost-center: "{{ costcenterLabel}}"
              insights_cost_management_optimizations: "true"
