components/cost-management/policies/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-center-from-namespace
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
