components/cost-management/policies/.chainsaw-test/resources/expected-pod-matching.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  namespace: demo-tenant
  labels:
    app: test-app
    cost-center: finance
    insights_cost_management_optimizations: "true"
spec:
  containers:
    - name: test-container
      image: nginx
